--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <h1>Hello Marin!</h1>
+    <h2>This is great!</h2>
     <img src="./assets/images/logo.png" alt="Logo">
+    <img src="/assets/images/logo.png" alt="Logo">
+    <img src="/assets/images/logo.png" alt="Logo">
+    <img src="/assets/images/logo.png" alt="Logo">
+    <img src="/assets/images/logo.png" alt="Logo">
 </body>
 
 </html>
