--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h2>This is great!</h2>
     <img src="./assets/images/logo.png" alt="Logo">
     <img src="./assets/images/logo.png" alt="Logo">
+    <img src="./assets/images/logo.png" alt="Logo">
+    <img src="./assets/images/logo.png" alt="Logo">
+    <img src="./assets/images/logo.png" alt="Logo">
 </body>
 
 </html>
